# ceres_trick

./: CMakeLists.txt  README.md
factor/: PoseLocalParameter.h  curve_factor.h  posegraph2d_factor.h  posegraph_factor.h  projection_factor.h
io/: readTUM.h  readg2o.h
src/: curve_fitting.cpp  g20_sphere_so3_analytic.cpp  g2o_sphere.cpp  g2o_sphere_analytical.cpp  slam2d.cpp  tum_rgbd.cpp
utils/: quaternion_utils.h  so3_utils.h  utils.h
